--- a/restfulapitax/pom.xml
+++ b/restfulapitax/pom.xml
@@ -53,6 +53,13 @@
             <scope>test</scope>
         </dependency>
 
+        <!-- JWT -->
+        <dependency>
+            <groupId>com.nimbusds</groupId>
+            <artifactId>nimbus-jose-jwt</artifactId>
+            <version>4.20</version>
+        </dependency>
+
     </dependencies>
 
     <build>
